2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Add a bunch of special
	functions.

2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2expxp.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/limitps.spad.pamphlet: Change strings to
	symbols.

2010-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/elfuts.spad.pamphlet: Use parameter instead of
	modulus as argument to elliptic functions.

2010-10-17  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: improve startup and handling of
	multiline input

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot: Fix a bug with conditional type info.

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/manip.spad.pamphlet,
	patching file src/interp/c-util.boot: Misc cleanups.

2010-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/clifford.spad.pamphlet,
	src/algebra/combfunc.spad.pamphlet,
	src/algebra/dirichlet.spad.pamphlet,
	src/algebra/export3D.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet,
	src/algebra/intef.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet,
	src/algebra/numarr.spad.pamphlet,
	src/algebra/rec.spad.pamphlet,
	src/algebra/tensor.spad.pamphlet: Whitespace cleanup.

2010-10-12  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* contrib/emacs/fricas.el: add LaTeX error handling to
	fricas-insert-TeX

2010-10-05  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/op.spad.pamphlet: hypergometric -> hypergeometric

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Add hypergeometric and Meijer